create dev branch

--- a/augtree/notebooks/00_llm_expands.ipynb
+++ b/augtree/notebooks/00_llm_expands.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -45,36 +45,38 @@
     }
    ],
    "source": [
-    "prefixes = ['', 'raw_']\n",
+    "prefixes = [\"\", \"raw_\"]\n",
     "for prefix in prefixes:\n",
-    "    results_dir = '../results/gpt3_cache'\n",
+    "    results_dir = \"../results/gpt3_cache\"\n",
     "    dir_names_dataset = [\n",
     "        dir_name\n",
     "        for dir_name in os.listdir(results_dir)\n",
     "        if os.path.isdir(join(results_dir, dir_name))\n",
     "    ]\n",
     "    for dir_name in dir_names_dataset:\n",
-    "        fnames = sorted([\n",
-    "            fname\n",
-    "            for fname in os.listdir(join(results_dir, dir_name))\n",
-    "            if fname.endswith('.pkl')\n",
-    "        ])\n",
-    "        if prefix == 'raw_':\n",
-    "            fnames = [fname for fname in fnames if fname.startswith('raw_')]\n",
+    "        fnames = sorted(\n",
+    "            [\n",
+    "                fname\n",
+    "                for fname in os.listdir(join(results_dir, dir_name))\n",
+    "                if fname.endswith(\".pkl\")\n",
+    "            ]\n",
+    "        )\n",
+    "        if prefix == \"raw_\":\n",
+    "            fnames = [fname for fname in fnames if fname.startswith(\"raw_\")]\n",
     "        else:\n",
-    "            fnames = [fname for fname in fnames if not fname.startswith('raw_')]\n",
+    "            fnames = [fname for fname in fnames if not fname.startswith(\"raw_\")]\n",
     "        d = {}\n",
     "        for fname in tqdm(fnames):\n",
     "            ser = pkl.load(open(join(results_dir, dir_name, fname), \"rb\"))\n",
     "            offset = 1\n",
-    "            if prefix == 'raw_':\n",
+    "            if prefix == \"raw_\":\n",
     "                offset = 4\n",
-    "            d[fname[offset:fname.index('___')]] = ser\n",
+    "            d[fname[offset : fname.index(\"___\")]] = ser\n",
     "\n",
     "        # dump dictionary d to json file\n",
     "        # with open(join(results_dir, prefix + dir_name + '.json'), 'w') as f:\n",
-    "            # json.dump(d, f, separators=(',', ':'))\n",
-    "        with open(join(results_dir, prefix + dir_name + '.pkl'), 'wb') as f:\n",
+    "        # json.dump(d, f, separators=(',', ':'))\n",
+    "        with open(join(results_dir, prefix + dir_name + \".pkl\"), \"wb\") as f:\n",
     "            pkl.dump(d, f)"
    ]
   },
