--- a/augtree/notebooks/01_results.ipynb
+++ b/augtree/notebooks/01_results.ipynb
@@ -50,11 +50,11 @@
     "ravg = imodelsx.process_results.average_over_seeds(r, experiment_filename)\n",
     "\n",
     "default_params = {\n",
-    "    'max_features': 1,\n",
-    "    'ngrams': 2,\n",
-    "    'refinement_strategy': 'llm',\n",
-    "    'use_llm_prompt_context': 0,\n",
-    "    'use_stemming': 0,\n",
+    "    \"max_features\": 1,\n",
+    "    \"ngrams\": 2,\n",
+    "    \"refinement_strategy\": \"llm\",\n",
+    "    \"use_llm_prompt_context\": 0,\n",
+    "    \"use_stemming\": 0,\n",
     "    # 'n_estimators': 1,\n",
     "    # 'subsample_frac': 1,\n",
     "}"
