--- a/augtree/notebooks/03_mimiciv.ipynb
+++ b/augtree/notebooks/03_mimiciv.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import sys\n",
     "import os\n",
-    "import re \n",
+    "import re\n",
     "\n",
     "sys.path.append(\"../scripts/mimic\")\n",
     "\n",
@@ -29,19 +29,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load icd9/10 codes\n",
-    "icd9_diagnosis = pd.read_excel(os.path.join(data_dir, \"icdcodes\", \"icd9_diagnosis.xlsx\"))\n",
-    "icd9_diagnosis.columns=[\"diagnosis_code\", \"long_description\", \"short_description\"]\n",
-    "icd9_diagnosis_dict = dict(zip(icd9_diagnosis.diagnosis_code, icd9_diagnosis.long_description))\n",
+    "icd9_diagnosis = pd.read_excel(\n",
+    "    os.path.join(data_dir, \"icdcodes\", \"icd9_diagnosis.xlsx\")\n",
+    ")\n",
+    "icd9_diagnosis.columns = [\"diagnosis_code\", \"long_description\", \"short_description\"]\n",
+    "icd9_diagnosis_dict = dict(\n",
+    "    zip(icd9_diagnosis.diagnosis_code, icd9_diagnosis.long_description)\n",
+    ")\n",
     "\n",
-    "icd9_procedure = pd.read_excel(os.path.join(data_dir, \"icdcodes\", \"icd9_procedure.xlsx\"))\n",
-    "icd9_procedure.columns=[\"procedure_code\", \"long_description\", \"short_description\"]\n",
-    "icd9_procedure.procedure_code = icd9_procedure.procedure_code.astype(str) \n",
-    "icd9_procedure_dict = dict(zip(icd9_procedure.procedure_code, icd9_procedure.long_description))\n",
+    "icd9_procedure = pd.read_excel(\n",
+    "    os.path.join(data_dir, \"icdcodes\", \"icd9_procedure.xlsx\")\n",
+    ")\n",
+    "icd9_procedure.columns = [\"procedure_code\", \"long_description\", \"short_description\"]\n",
+    "icd9_procedure.procedure_code = icd9_procedure.procedure_code.astype(str)\n",
+    "icd9_procedure_dict = dict(\n",
+    "    zip(icd9_procedure.procedure_code, icd9_procedure.long_description)\n",
+    ")\n",
     "\n",
     "icd10_diagnosis_dict = {}\n",
     "with open(os.path.join(data_dir, \"icdcodes\", \"icd10_diagnosis.txt\"), \"r\") as file:\n",
@@ -50,8 +58,8 @@
     "    sentences = []\n",
     "    for line in lines:\n",
     "        # only up to the first 8 characters in the line are the codes\n",
-    "        code = line[:8].strip(' ')\n",
-    "        description = line[8:].strip(' ').strip('\\n')\n",
+    "        code = line[:8].strip(\" \")\n",
+    "        description = line[8:].strip(\" \").strip(\"\\n\")\n",
     "        icd10_diagnosis_dict[code] = description\n",
     "\n",
     "icd10_procedure_dict = {}\n",
@@ -65,8 +73,8 @@
     "        # so manually split the line there and add whitespace so that the regex works\n",
     "        new_line = line[:77] + \"         \" + line[77:]\n",
     "        match = re.search(\"^\\d{5}\\s+([A-Za-z0-9]+)\\s+[01]{1}\\s+.+\\s+(\\s+.+)\", new_line)\n",
-    "        code = match.group(1).strip(' ')\n",
-    "        description = match.group(2).strip(' ').strip('\\n')\n",
+    "        code = match.group(1).strip(\" \")\n",
+    "        description = match.group(2).strip(\" \").strip(\"\\n\")\n",
     "        icd10_procedure_dict[code] = description"
    ]
   },
